--- a/index.html
+++ b/index.html
@@ -1,276 +1,1 @@
-<!doctype html>
-<html lang="es">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kairu Tech · Go-To-Market para España y LATAM</title>
-  <meta name="description" content="Kairu Tech ayuda a startups europeas y británicas a entrar y crecer en los mercados de habla hispana con estrategia, partners y ventas.">
-  <meta property="og:title" content="Kairu Tech · Go-To-Market para España y LATAM">
-  <meta property="og:description" content="Entradas a mercado, partners y ventas para tecnología B2B en España y LATAM.">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="https://kairu.tech/og-image.jpg">
-  <meta name="twitter:card" content="summary_large_image">
-  <link rel="icon" href="/favicon.ico">
-
-  <!-- Tailwind (CDN) -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = { theme: { extend: { colors: { kairu: {
-      50:'#eff6ff',100:'#dbeafe',200:'#bfdbfe',300:'#93c5fd',400:'#60a5fa',500:'#3b82f6',600:'#2563eb',700:'#1d4ed8',800:'#1e40af',900:'#1e3a8a'
-    }}}}};
-  </script>
-  <style>
-    /* Suave blur y sombra para tarjetas */
-    .card { @apply rounded-2xl shadow-lg bg-white/90 backdrop-blur; }
-    .container-narrow { max-width: 1100px; }
-  </style>
-</head>
-<body class="antialiased text-slate-800 bg-gradient-to-b from-white to-slate-50">
-  <!-- NAV -->
-  <header class="sticky top-0 z-50 bg-white/80 backdrop-blur border-b border-slate-200/50">
-    <div class="mx-auto px-4 sm:px-6 container-narrow">
-      <div class="flex items-center justify-between h-16">
-        <a href="#" class="flex items-center gap-3">
-          <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="text-kairu-600">
-            <path d="M12 2l3.5 6.5L22 9l-5 4.9L18.5 21 12 17.8 5.5 21 7 13.9 2 9l6.5-.5L12 2z" stroke="currentColor" stroke-width="1.2" fill="none"/>
-          </svg>
-          <span class="font-semibold text-lg">Kairu <span class="text-kairu-600">Tech</span></span>
-        </a>
-        <nav class="hidden md:flex items-center gap-6 text-sm">
-          <a href="#servicios" class="hover:text-kairu-600">Servicios</a>
-          <a href="#sectores" class="hover:text-kairu-600">Sectores</a>
-          <a href="#metodologia" class="hover:text-kairu-600">Método</a>
-          <a href="#contacto" class="px-4 py-2 rounded-xl bg-kairu-600 text-white">Hablemos</a>
-        </nav>
-        <button id="menuBtn" class="md:hidden p-2" aria-label="Abrir menú">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M3 6h18M3 12h18M3 18h18"/></svg>
-        </button>
-      </div>
-    </div>
-    <div id="mobileMenu" class="md:hidden hidden border-t border-slate-200 bg-white">
-      <div class="px-4 py-3 flex flex-col gap-3 text-sm">
-        <a href="#servicios" class="hover:text-kairu-600">Servicios</a>
-        <a href="#sectores" class="hover:text-kairu-600">Sectores</a>
-        <a href="#metodologia" class="hover:text-kairu-600">Método</a>
-        <a href="#contacto" class="px-4 py-2 rounded-xl bg-kairu-600 text-white w-max">Hablemos</a>
-      </div>
-    </div>
-  </header>
-
-  <!-- HERO -->
-  <section class="relative overflow-hidden">
-    <div class="mx-auto px-4 sm:px-6 pt-16 pb-16 container-narrow">
-      <div class="grid md:grid-cols-2 gap-10 items-center">
-        <div>
-          <h1 class="text-4xl sm:text-5xl font-extrabold leading-tight">
-            Go‑To‑Market para <span class="text-kairu-600">España</span> y <span class="text-kairu-600">LATAM</span>
-          </h1>
-          <p class="mt-5 text-lg text-slate-600">Aceleramos la expansión de empresas tecnológicas europeas y británicas en mercados de habla hispana. Estrategia, partners y ventas — sin humo.</p>
-          <div class="mt-6 flex gap-3 flex-wrap">
-            <a href="#contacto" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">Agenda una llamada</a>
-            <a href="#servicios" class="px-5 py-3 rounded-xl border border-slate-300 font-medium">Ver servicios</a>
-          </div>
-          <div class="mt-6 text-xs text-slate-500">Experiencia: seguridad, GovTech, EdTech, AgTech/FoodTech.</div>
-        </div>
-        <div class="card p-6">
-          <div class="grid grid-cols-2 gap-4">
-            <div class="p-4 rounded-xl bg-slate-50">
-              <p class="text-3xl font-bold">+10</p>
-              <p class="text-sm text-slate-600">años lanzando productos en ES/LATAM</p>
-            </div>
-            <div class="p-4 rounded-xl bg-slate-50">
-              <p class="text-3xl font-bold">30+</p>
-              <p class="text-sm text-slate-600">partners y cuentas estratégicas</p>
-            </div>
-            <div class="p-4 rounded-xl bg-slate-50">
-              <p class="text-3xl font-bold">€MM</p>
-              <p class="text-sm text-slate-600">ventas gestionadas en la región</p>
-            </div>
-            <div class="p-4 rounded-xl bg-slate-50">
-              <p class="text-3xl font-bold">B2B</p>
-              <p class="text-sm text-slate-600">foco en ventas complejas</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- LOGOS (placeholder) -->
-  <section class="py-8 border-y border-slate-200/60 bg-white/70">
-    <div class="mx-auto px-4 sm:px-6 container-narrow">
-      <p class="text-center text-sm text-slate-500">Confían en la experiencia de Kairu Tech profesionales de empresas europeas y británicas</p>
-      <div class="mt-4 grid grid-cols-2 md:grid-cols-5 gap-6 opacity-70">
-        <div class="h-10 bg-slate-100 rounded"></div>
-        <div class="h-10 bg-slate-100 rounded"></div>
-        <div class="h-10 bg-slate-100 rounded"></div>
-        <div class="h-10 bg-slate-100 rounded"></div>
-        <div class="h-10 bg-slate-100 rounded"></div>
-      </div>
-    </div>
-  </section>
-
-  <!-- SERVICIOS -->
-  <section id="servicios" class="py-16">
-    <div class="mx-auto px-4 sm:px-6 container-narrow">
-      <h2 class="text-3xl font-bold">Servicios</h2>
-      <p class="mt-2 text-slate-600">Paquetes ligeros para empezar sin costes fijos. Puedes combinar o ampliar en función de tus objetivos.</p>
-      <div class="mt-8 grid md:grid-cols-3 gap-6">
-        <div class="card p-6">
-          <h3 class="font-semibold text-lg">Market Entry Sprint (4 semanas)</h3>
-          <p class="mt-2 text-sm text-slate-600">Validación rápida: ICP, mensaje local, 30 cuentas objetivo y primeros 5–10 meetings.</p>
-          <ul class="mt-3 text-sm list-disc pl-5 space-y-1 text-slate-700">
-            <li>Mapa de actores y competencia</li>
-            <li>Guiones de venta y español neutro</li>
-            <li>Lista de partners y canales</li>
-          </ul>
-          <p class="mt-4 text-sm">Desde <span class="font-semibold">€0 fijo</span> + variable por éxito*</p>
-        </div>
-        <div class="card p-6">
-          <h3 class="font-semibold text-lg">Partner & Channel Build</h3>
-          <p class="mt-2 text-sm text-slate-600">Captación y activación de distribuidores, integradores y alianzas públicas/privadas.</p>
-          <ul class="mt-3 text-sm list-disc pl-5 space-y-1 text-slate-700">
-            <li>Acuerdos y playbooks</li>
-            <li>Onboarding y pipeline</li>
-            <li>Co‑marketing local</li>
-          </ul>
-          <p class="mt-4 text-sm">Modelo retainer ligero o comisión por ventas*</p>
-        </div>
-        <div class="card p-6">
-          <h3 class="font-semibold text-lg">Ventas como Servicio</h3>
-          <p class="mt-2 text-sm text-slate-600">Representación comercial temporal (Country/Regional Manager) para acelerar ARR sin headcount.</p>
-          <ul class="mt-3 text-sm list-disc pl-5 space-y-1 text-slate-700">
-            <li>Prospección y demos</li>
-            <li>RFPs y cuentas públicas</li>
-            <li>Closing y handover</li>
-          </ul>
-          <p class="mt-4 text-sm">Tarifa flexible + éxito*</p>
-        </div>
-      </div>
-      <p class="mt-4 text-xs text-slate-500">* Estructura adaptada a cada proyecto para minimizar costes fijos.</p>
-    </div>
-  </section>
-
-  <!-- SECTORES -->
-  <section id="sectores" class="py-16 bg-white/60 border-y border-slate-200/60">
-    <div class="mx-auto px-4 sm:px-6 container-narrow">
-      <h2 class="text-3xl font-bold">Sectores donde aportamos más</h2>
-      <div class="mt-8 grid md:grid-cols-4 gap-6">
-        <div class="card p-5">
-          <p class="font-semibold">Seguridad &amp; Bodycams</p>
-          <p class="text-sm text-slate-600 mt-1">Ventas complejas a sector público y partners.</p>
-        </div>
-        <div class="card p-5">
-          <p class="font-semibold">GovTech &amp; Smart Cities</p>
-          <p class="text-sm text-slate-600 mt-1">Procesos de compra, licitaciones y pilotos.</p>
-        </div>
-        <div class="card p-5">
-          <p class="font-semibold">EdTech Infantil</p>
-          <p class="text-sm text-slate-600 mt-1">Distribución y retail en España y LATAM.</p>
-        </div>
-        <div class="card p-5">
-          <p class="font-semibold">AgTech &amp; FoodTech</p>
-          <p class="text-sm text-slate-600 mt-1">Partners regionales y adopción en campo.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- METODO -->
-  <section id="metodologia" class="py-16">
-    <div class="mx-auto px-4 sm:px-6 container-narrow">
-      <h2 class="text-3xl font-bold">Método Kairu</h2>
-      <div class="mt-8 grid md:grid-cols-3 gap-6">
-        <div class="card p-6">
-          <p class="text-xs uppercase tracking-wider text-slate-500">Paso 1</p>
-          <h3 class="font-semibold mt-1">Diagnóstico</h3>
-          <p class="text-sm text-slate-600 mt-2">ICP, propuesta de valor local y mensajes que funcionan en español.</p>
-        </div>
-        <div class="card p-6">
-          <p class="text-xs uppercase tracking-wider text-slate-500">Paso 2</p>
-          <h3 class="font-semibold mt-1">Tracción</h3>
-          <p class="text-sm text-slate-600 mt-2">Pipeline inicial con cuentas clave y acuerdos con partners.</p>
-        </div>
-        <div class="card p-6">
-          <p class="text-xs uppercase tracking-wider text-slate-500">Paso 3</p>
-          <h3 class="font-semibold mt-1">Escala</h3>
-          <p class="text-sm text-slate-600 mt-2">Playbooks, métricas y traspaso al equipo interno.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- CTA -->
-  <section class="py-16 bg-gradient-to-r from-kairu-600 to-kairu-800 text-white">
-    <div class="mx-auto px-4 sm:px-6 container-narrow">
-      <div class="grid md:grid-cols-3 gap-8 items-center">
-        <div class="md:col-span-2">
-          <h2 class="text-3xl font-bold">¿Empezamos con algo pequeño y medible?</h2>
-          <p class="mt-2 text-white/80">Proponme un reto de 30 días y vemos resultados reales sin grandes riesgos.</p>
-        </div>
-        <div class="md:justify-self-end">
-          <a href="#contacto" class="inline-block px-6 py-3 rounded-xl bg-white text-kairu-700 font-semibold">Quiero hablar</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- CONTACTO -->
-  <section id="contacto" class="py-16">
-    <div class="mx-auto px-4 sm:px-6 container-narrow">
-      <h2 class="text-3xl font-bold">Contacto</h2>
-      <p class="mt-2 text-slate-600">Sin formularios complejos. Escribe un email o agenda una videollamada.</p>
-
-      <div class="mt-8 grid md:grid-cols-2 gap-6">
-        <div class="card p-6">
-          <h3 class="font-semibold">Email directo</h3>
-          <p class="text-sm text-slate-600 mt-2">Cuéntame en 3–4 líneas tu objetivo y el estado actual.</p>
-          <a class="mt-4 inline-block px-5 py-3 rounded-xl bg-kairu-600 text-white" href="mailto:hello@kairu.tech?subject=Kairu%20Tech%20-%20Consulta&body=Hola%20Alex,%20queremos%20explorar%20el%20mercado%20de%20ES/LATAM%20para%20...">Enviar email</a>
-          <p class="text-xs text-slate-500 mt-3">Si prefieres formulario, puedes conectar gratis Formspree o Getform (añade tu endpoint en el HTML).</p>
-        </div>
-        <div class="card p-6">
-          <h3 class="font-semibold">Agenda una llamada</h3>
-          <p class="text-sm text-slate-600 mt-2">Usa tu herramienta favorita (Calendly, Cal.com…). Pon el enlace aquí cuando lo tengas.</p>
-          <a class="mt-4 inline-block px-5 py-3 rounded-xl border border-slate-300" href="#" aria-disabled="true">Añadir enlace de calendario</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <footer class="py-10 border-t border-slate-200/60 text-sm text-slate-500">
-    <div class="mx-auto px-4 sm:px-6 container-narrow flex flex-col md:flex-row items-center justify-between gap-4">
-      <p>© <span id="year"></span> Kairu Tech · Madrid — España</p>
-      <div class="flex items-center gap-4">
-        <a href="#" class="hover:text-kairu-600">Aviso legal</a>
-        <a href="#" class="hover:text-kairu-600">Privacidad</a>
-        <a href="#" class="hover:text-kairu-600">Cookies (opc.)</a>
-      </div>
-    </div>
-  </footer>
-
-  <!-- Simple scripts -->
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-    document.getElementById('menuBtn').addEventListener('click', ()=>{
-      document.getElementById('mobileMenu').classList.toggle('hidden');
-    });
-  </script>
-
-  <!-- JSON-LD básico para SEO -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Kairu Tech",
-    "url": "https://kairu.tech",
-    "logo": "https://kairu.tech/logo.png",
-    "sameAs": [],
-    "description": "Go-To-Market para tecnología B2B en España y LATAM."
-  }
-  </script>
-
-  <!-- (Opcional) Analytics gratis y sin cookies: Cloudflare Web Analytics. Pega tu token aquí cuando lo tengas.
-  <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": "TU_TOKEN"}'></script>
-  -->
-</body>
-</html>
+<html><body><h1>Index ES</h1></body></html>
