--- a/index.html
+++ b/index.html
@@ -1,99 +1,22 @@
-<!doctype html><html lang="es"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Kairu Tech · Go-To-Market para España y LATAM</title>
-<meta name="description" content="Entradas a mercado, partners y ventas para tecnología B2B en España y LATAM.">
-<meta property="og:title" content="Kairu Tech · Go-To-Market para España y LATAM">
-<meta property="og:description" content="Ayudamos a startups UK/EU a entrar y crecer en mercados de habla hispana.">
-<meta property="og:type" content="website"><meta property="og:image" content="https://kairu.tech/og-image.jpg">
-<link rel="icon" href="/favicon.ico">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = { theme: { extend: { colors: { kairu: {
-      50:'#eff6ff',100:'#dbeafe',200:'#bfdbfe',300:'#93c5fd',400:'#60a5fa',500:'#3b82f6',600:'#2563eb',700:'#1d4ed8',800:'#1e40af',900:'#1e3a8a'
-    }}}}};
-  </script>
-  <style>.card{border-radius:1rem;box-shadow:0 8px 24px rgba(2,6,23,.06);background:rgba(255,255,255,.9);backdrop-filter:blur(6px)}.container-narrow{max-width:1100px}</style>
-</head><body class="antialiased text-slate-800 bg-gradient-to-b from-white to-slate-50">
-
-<header class="sticky top-0 z-50 bg-white/80 backdrop-blur border-b border-slate-200/50">
-  <div class="mx-auto px-4 sm:px-6 container-narrow">
-    <div class="flex items-center justify-between h-16">
-      <a href="/" class="flex items-center gap-3">
-        <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="text-kairu-600"><path d="M12 2l3.5 6.5L22 9l-5 4.9L18.5 21 12 17.8 5.5 21 7 13.9 2 9l6.5-.5L12 2z" stroke="currentColor" stroke-width="1.2" fill="none"/></svg>
-        <span class="font-semibold text-lg">Kairu <span class="text-kairu-600">Tech</span></span>
-      </a>
-      <nav class="hidden md:flex items-center gap-6 text-sm"><a href="/#servicios" class="hover:text-kairu-600">Servicios</a><a href="/servicios.html" class="hover:text-kairu-600">Paquetes</a><a href="/contacto.html" class="hover:text-kairu-600">Contacto</a><a href="/legal.html" class="hover:text-kairu-600">Legal</a><span class="text-slate-300">|</span><a href="/en/" class="hover:text-kairu-600">EN</a>
-        <a href="/contacto.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white">Hablemos</a>
-      </nav>
-      <button id="menuBtn" class="md:hidden p-2" aria-label="menu"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M3 6h18M3 12h18M3 18h18"/></svg></button>
-    </div>
+<!doctype html><html lang="es"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Kairu Tech · Go-To-Market para España y LATAM</title></head><body>
+<h1>Abrimos clientes y partners sin costes fijos. Estrategia clara, ejecución local y foco en resultados.</h1>
+<div class="grid grid-cols-2 gap-4">
+  <div class="p-4 rounded-xl bg-slate-50">
+    <p class="text-3xl font-bold">+10</p>
+    <p class="text-sm text-slate-600">años abriendo mercado ES/LATAM</p>
   </div>
-  <div id="mobileMenu" class="md:hidden hidden border-t border-slate-200 bg-white">
-    <div class="px-4 py-3 flex flex-col gap-3 text-sm"><a href="/#servicios" class="hover:text-kairu-600">Servicios</a><a href="/servicios.html" class="hover:text-kairu-600">Paquetes</a><a href="/contacto.html" class="hover:text-kairu-600">Contacto</a><a href="/legal.html" class="hover:text-kairu-600">Legal</a><div class="pt-2"><a href="/en/" class="hover:text-kairu-600">EN</a></div>
-      <a href="/contacto.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white w-max">Hablemos</a>
-    </div>
+  <div class="p-4 rounded-xl bg-slate-50">
+    <p class="text-3xl font-bold">Red</p>
+    <p class="text-sm text-slate-600">partners y cuentas estratégicas</p>
   </div>
-</header>
-
-<section class="relative overflow-hidden">
-  <div class="mx-auto px-4 sm:px-6 pt-16 pb-16 container-narrow">
-    <div class="grid md:grid-cols-2 gap-10 items-center">
-      <div>
-        <h1 class="text-4xl sm:text-5xl font-extrabold leading-tight">
-          Go‑To‑Market para <span class="text-kairu-600">España</span> y <span class="text-kairu-600">LATAM</span>
-        </h1>
-        <p class="mt-5 text-lg text-slate-600">Abrimos clientes y partners sin costes fijos. Estrategia clara, ejecución local y foco en resultados.</p>
-        <div class="mt-6 flex gap-3 flex-wrap">
-          <a href="/contacto.html" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">Agenda una conversación</a>
-          <a href="/servicios.html" class="px-5 py-3 rounded-xl border border-slate-300 font-medium">Ver servicios</a>
-        </div>
-        <div class="mt-6 text-xs text-slate-500">SaaS B2B, GovTech, EdTech, AgTech/FoodTech, Smart Solutions.</div>
-      </div>
-      <div class="card p-6">
-        <div class="grid grid-cols-2 gap-4">
-          <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">+10</p><p class="text-sm text-slate-600">años abriendo mercado ES/LATAM</p></div>
-          <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">30+</p><p class="text-sm text-slate-600">partners y cuentas clave</p></div>
-          <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Lean</p><p class="text-sm text-slate-600">modelo con variable por éxito</p></div>
-          <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Playbooks</p><p class="text-sm text-slate-600">traspaso al equipo</p></div>
-        </div>
-      </div>
-    </div>
+  <div class="p-4 rounded-xl bg-slate-50">
+    <p class="text-3xl font-bold">Modelo</p>
+    <p class="text-sm text-slate-600">flexible: fijo mínimo + variable por éxito</p>
   </div>
-</section>
-<section id="servicios" class="py-16 bg-white/60 border-y border-slate-200/60">
-  <div class="mx-auto px-4 sm:px-6 container-narrow">
-    <h2 class="text-3xl font-bold">Servicios</h2>
-    <div class="mt-8 grid md:grid-cols-3 gap-6">
-      <div class="card p-6"><h3 class="font-semibold text-lg">Market Entry Sprint (4 semanas)</h3><p class="mt-2 text-sm text-slate-600">Encaje local, ICP, mensajes y primeras 5–10 reuniones.</p></div>
-      <div class="card p-6"><h3 class="font-semibold text-lg">Partner & Channel Build</h3><p class="mt-2 text-sm text-slate-600">Identificación, acuerdos y activación de partners.</p></div>
-      <div class="card p-6"><h3 class="font-semibold text-lg">Ventas como Servicio</h3><p class="mt-2 text-sm text-slate-600">Country/Regional Manager temporal para acelerar ARR.</p></div>
-    </div>
-    <p class="mt-4 text-xs text-slate-500">Modelo flexible: fijo mínimo + variable por éxito.</p>
+  <div class="p-4 rounded-xl bg-slate-50">
+    <p class="text-3xl font-bold">Método</p>
+    <p class="text-sm text-slate-600">transferible: guías prácticas para tu equipo</p>
   </div>
-</section>
-<section class="py-16">
-  <div class="mx-auto px-4 sm:px-6 container-narrow">
-    <h2 class="text-3xl font-bold">Método Kairu</h2>
-    <div class="mt-8 grid md:grid-cols-3 gap-6">
-      <div class="card p-6"><p class="text-xs uppercase tracking-wider text-slate-500">Paso 1</p><h3 class="font-semibold mt-1">Diagnóstico</h3><p class="text-sm text-slate-600 mt-2">ICP, propuesta de valor y mensajes.</p></div>
-      <div class="card p-6"><p class="text-xs uppercase tracking-wider text-slate-500">Paso 2</p><h3 class="font-semibold mt-1">Tracción</h3><p class="text-sm text-slate-600 mt-2">Pipeline inicial y acuerdos con partners.</p></div>
-      <div class="card p-6"><p class="text-xs uppercase tracking-wider text-slate-500">Paso 3</p><h3 class="font-semibold mt-1">Escala</h3><p class="text-sm text-slate-600 mt-2">Playbooks, métricas y handover.</p></div>
-    </div>
-  </div>
-</section>
-<section class="py-16 bg-gradient-to-r from-kairu-600 to-kairu-800 text-white">
-  <div class="mx-auto px-4 sm:px-6 container-narrow grid md:grid-cols-3 gap-8 items-center">
-    <div class="md:col-span-2"><h2 class="text-3xl font-bold">¿Probamos 30 días?</h2><p class="mt-2 text-white/80">Objetivo medible, ejecución ligera y resultados reales.</p></div>
-    <div class="md:justify-self-end"><a href="/contacto.html" class="inline-block px-6 py-3 rounded-xl bg-white text-kairu-700 font-semibold">Contactar</a></div>
-  </div>
-</section>
-
-<footer class="py-10 border-t border-slate-200/60 text-sm text-slate-500">
-  <div class="mx-auto px-4 sm:px-6 container-narrow flex flex-col md:flex-row items-center justify-between gap-4">
-    <p>© <span id="year"></span> Kairu Tech · Madrid & London</p>
-    <div class="flex items-center gap-4"><a href="/legal.html" class="hover:text-kairu-600">Legal</a></div>
-  </div>
-</footer>
-<script>document.getElementById('year').textContent=new Date().getFullYear();document.getElementById('menuBtn').addEventListener('click',()=>{document.getElementById('mobileMenu').classList.toggle('hidden')});</script>
-
+</div>
 </body></html>
