--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
-<!doctype html><html lang="es"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Kairu Tech · Go-To-Market para España y LATAM</title></head><body>
-<h1>Abrimos clientes y partners sin costes fijos. Estrategia clara, ejecución local y foco en resultados.</h1>
-<div class="grid grid-cols-2 gap-4">
-  <div class="p-4 rounded-xl bg-slate-50">
-    <p class="text-3xl font-bold">+10</p>
-    <p class="text-sm text-slate-600">años abriendo mercado ES/LATAM</p>
-  </div>
-  <div class="p-4 rounded-xl bg-slate-50">
-    <p class="text-3xl font-bold">Red</p>
-    <p class="text-sm text-slate-600">partners y cuentas estratégicas</p>
-  </div>
-  <div class="p-4 rounded-xl bg-slate-50">
-    <p class="text-3xl font-bold">Modelo</p>
-    <p class="text-sm text-slate-600">flexible: fijo mínimo + variable por éxito</p>
-  </div>
-  <div class="p-4 rounded-xl bg-slate-50">
-    <p class="text-3xl font-bold">Método</p>
-    <p class="text-sm text-slate-600">transferible: guías prácticas para tu equipo</p>
-  </div>
+<!doctype html><html lang="es"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Kairu Tech · Go-To-Market para España y LATAM</title>
+<meta name="description" content="Entradas a mercado, partners y ventas para tecnología B2B en España y LATAM.">
+<link rel="icon" href="/favicon.ico">
+<script src="https://cdn.tailwindcss.com"></script>
+</head><body class="antialiased text-slate-800 bg-gradient-to-b from-white to-slate-50">
+<h1 class="text-4xl font-extrabold">Abrimos clientes y partners sin costes fijos. Estrategia clara, ejecución local y foco en resultados.</h1>
+<div class="grid grid-cols-2 gap-4 mt-6">
+  <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">+10</p><p class="text-sm">años abriendo mercado ES/LATAM</p></div>
+  <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Red</p><p class="text-sm">partners y cuentas estratégicas</p></div>
+  <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Modelo</p><p class="text-sm">flexible: fijo mínimo + variable por éxito</p></div>
+  <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Método</p><p class="text-sm">transferible: guías prácticas para tu equipo</p></div>
 </div>
+<section class="py-16"><h2 class="text-2xl font-bold">Servicios</h2><p>Market Entry, Partner Build, Ventas como Servicio</p></section>
+<footer class="py-10 border-t">© Kairu Tech · Madrid & London</footer>
 </body></html>
