--- a/en/index.html
+++ b/en/index.html
@@ -5,153 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kairu Tech · Go-To-Market for Spain & LATAM</title>
   <meta name="description" content="Market entry, partners and sales for B2B tech in Spain & LATAM.">
-  <meta property="og:title" content="Kairu Tech · Go-To-Market for Spain & LATAM">
-  <meta property="og:description" content="We help UK/EU startups enter and grow in Spanish-speaking markets.">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="https://kairu.tech/og-image.jpg">
   <link rel="icon" href="/favicon.ico">
-  
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = { theme: { extend: { colors: { kairu: {
-      50:'#eff6ff',100:'#dbeafe',200:'#bfdbfe',300:'#93c5fd',400:'#60a5fa',500:'#3b82f6',600:'#2563eb',700:'#1d4ed8',800:'#1e40af',900:'#1e3a8a'
-    }}}}};
-  </script>
-  <style>
-    .card { border-radius: 1rem; box-shadow: 0 8px 24px rgba(2,6,23,.06); background: rgba(255,255,255,.9); backdrop-filter: blur(6px); }
-    .container-narrow { max-width: 1100px; }
-  </style>
-
 </head>
 <body class="antialiased text-slate-800 bg-gradient-to-b from-white to-slate-50">
-  
-<header class="sticky top-0 z-50 bg-white/80 backdrop-blur border-b border-slate-200/50">
-  <div class="mx-auto px-4 sm:px-6 container-narrow">
-    <div class="flex items-center justify-between h-16">
-      <a href="/en/" class="flex items-center gap-3">
-        <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="text-kairu-600">
-          <path d="M12 2l3.5 6.5L22 9l-5 4.9L18.5 21 12 17.8 5.5 21 7 13.9 2 9l6.5-.5L12 2z" stroke="currentColor" stroke-width="1.2" fill="none"/>
-        </svg>
-        <span class="font-semibold text-lg">Kairu <span class="text-kairu-600">Tech</span></span>
-      </a>
-      <nav class="hidden md:flex items-center gap-6 text-sm">
-        <a href="#services" class="hover:text-kairu-600">Services</a>
-        <a href="/en/services.html" class="hover:text-kairu-600">Packages</a>
-        <a href="/en/contact.html" class="hover:text-kairu-600">Contact</a>
-        <a href="/en/legal.html" class="hover:text-kairu-600">Legal</a>
-        <span class="text-slate-300">|</span>
-        <a href="/" class="hover:text-kairu-600">ES</a>
-        <a href="/en/contact.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white">Talk</a>
-      </nav>
-      <button id="menuBtn" class="md:hidden p-2" aria-label="Open menu">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M3 6h18M3 12h18M3 18h18"/></svg>
-      </button>
-    </div>
-  </div>
-  <div id="mobileMenu" class="md:hidden hidden border-t border-slate-200 bg-white">
-    <div class="px-4 py-3 flex flex-col gap-3 text-sm">
-      <a href="#services" class="hover:text-kairu-600">Services</a>
-      <a href="/en/services.html" class="hover:text-kairu-600">Packages</a>
-      <a href="/en/contact.html" class="hover:text-kairu-600">Contact</a>
-      <a href="/en/legal.html" class="hover:text-kairu-600">Legal</a>
-      <div class="pt-2"><a href="/" class="hover:text-kairu-600">ES</a></div>
-      <a href="/en/contact.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white w-max">Talk</a>
-    </div>
-  </div>
-</header>
-
-
-  <!-- HERO -->
   <section class="relative overflow-hidden">
-    <div class="mx-auto px-4 sm:px-6 pt-16 pb-16 container-narrow">
+    <div class="mx-auto px-4 sm:px-6 pt-16 pb-16 max-w-5xl">
       <div class="grid md:grid-cols-2 gap-10 items-center">
         <div>
           <h1 class="text-4xl sm:text-5xl font-extrabold leading-tight">
-            We open customers and partners without fixed costs. Clear strategy, local execution and focus on results.
+            Go-To-Market for <span class="text-kairu-600">Spain</span> & <span class="text-kairu-600">LATAM</span>
           </h1>
-          <div class="mt-6 flex gap-3 flex-wrap">
-            <a href="/en/contact.html" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">Book a conversation</a>
-            <a href="/en/services.html" class="px-5 py-3 rounded-xl border border-slate-300 font-medium">See services</a>
-          </div>
-          <div class="mt-6 text-xs text-slate-500">Typical domains: B2B SaaS, GovTech, EdTech, AgTech/FoodTech, Smart Solutions.</div>
+          <p class="mt-5 text-lg text-slate-600">
+            We open customers and partners without fixed costs. Clear strategy, local execution and focus on results.
+          </p>
         </div>
-        <div class="card p-6">
-          <div class="grid grid-cols-2 gap-4">
-            <div class="p-4 rounded-xl bg-slate-50">
-              <p class="text-3xl font-bold">+10</p>
-              <p class="text-sm text-slate-600">years opening ES/LATAM</p>
-            </div>
-            <div class="p-4 rounded-xl bg-slate-50">
-              <p class="text-3xl font-bold">Network</p>
-              <p class="text-sm text-slate-600">of partners & strategic accounts</p>
-            </div>
-            <div class="p-4 rounded-xl bg-slate-50">
-              <p class="text-3xl font-bold">Flexible</p>
-              <p class="text-sm text-slate-600">small retainer + success fee</p>
-            </div>
-            <div class="p-4 rounded-xl bg-slate-50">
-              <p class="text-3xl font-bold">Transferable</p>
-              <p class="text-sm text-slate-600">practical playbooks for your team</p>
-            </div>
-          </div>
+        <div class="grid grid-cols-2 gap-4">
+          <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">+10</p><p class="text-sm">years opening ES/LATAM</p></div>
+          <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Network</p><p class="text-sm">of partners & strategic accounts</p></div>
+          <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Flexible</p><p class="text-sm">small retainer + success fee</p></div>
+          <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Transferable</p><p class="text-sm">practical playbooks for your team</p></div>
         </div>
       </div>
     </div>
   </section>
-
-  <!-- SERVICES PREVIEW -->
-  <section id="services" class="py-16 bg-white/60 border-y border-slate-200/60">
-    <div class="mx-auto px-4 sm:px-6 container-narrow">
-      <h2 class="text-3xl font-bold">Services</h2>
-      <div class="mt-8 grid md:grid-cols-3 gap-6">
-        <div class="card p-6"><h3 class="font-semibold text-lg">Market Entry Sprint (4 weeks)</h3><p class="mt-2 text-sm text-slate-600">Local fit, ICP, messaging and first 5–10 meetings.</p></div>
-        <div class="card p-6"><h3 class="font-semibold text-lg">Partner & Channel Build</h3><p class="mt-2 text-sm text-slate-600">Discovery, agreements and activation of partners.</p></div>
-        <div class="card p-6"><h3 class="font-semibold text-lg">Sales as a Service</h3><p class="mt-2 text-sm text-slate-600">Interim Country/Regional Manager to accelerate ARR.</p></div>
-      </div>
-      <p class="mt-4 text-xs text-slate-500">Flexible model: small retainer + success fee.</p>
-    </div>
-  </section>
-
-  <!-- METHOD -->
-  <section class="py-16">
-    <div class="mx-auto px-4 sm:px-6 container-narrow">
-      <h2 class="text-3xl font-bold">Kairu Method</h2>
-      <div class="mt-8 grid md:grid-cols-3 gap-6">
-        <div class="card p-6"><p class="text-xs uppercase tracking-wider text-slate-500">Step 1</p><h3 class="font-semibold mt-1">Diagnosis</h3><p class="text-sm text-slate-600 mt-2">ICP, value prop and messages.</p></div>
-        <div class="card p-6"><p class="text-xs uppercase tracking-wider text-slate-500">Step 2</p><h3 class="font-semibold mt-1">Traction</h3><p class="text-sm text-slate-600 mt-2">Initial pipeline and partner agreements.</p></div>
-        <div class="card p-6"><p class="text-xs uppercase tracking-wider text-slate-500">Step 3</p><h3 class="font-semibold mt-1">Scale</h3><p class="text-sm text-slate-600 mt-2">Playbooks, metrics and handover.</p></div>
-      </div>
-    </div>
-  </section>
-
-  <!-- CTA -->
-  <section class="py-16 bg-gradient-to-r from-kairu-600 to-kairu-800 text-white">
-    <div class="mx-auto px-4 sm:px-6 container-narrow grid md:grid-cols-3 gap-8 items-center">
-      <div class="md:col-span-2">
-        <h2 class="text-3xl font-bold">Pilot 30 days?</h2>
-        <p class="mt-2 text-white/80">Clear objective, lean execution and measurable results.</p>
-      </div>
-      <div class="md:justify-self-end">
-        <a href="/en/contact.html" class="inline-block px-6 py-3 rounded-xl bg-white text-kairu-700 font-semibold">Get in touch</a>
-      </div>
-    </div>
-  </section>
-
-  
-<footer class="py-10 border-t border-slate-200/60 text-sm text-slate-500">
-  <div class="mx-auto px-4 sm:px-6 container-narrow flex flex-col md:flex-row items-center justify-between gap-4">
-    <p>© <span id="year"></span> Kairu Tech · Madrid & London</p>
-    <div class="flex items-center gap-4">
-      <a href="/legal.html" class="hover:text-kairu-600">Legal</a>
-    </div>
-  </div>
-</footer>
-<script>
-  document.getElementById('year').textContent = new Date().getFullYear();
-  document.getElementById('menuBtn').addEventListener('click', ()=>{
-    document.getElementById('mobileMenu').classList.toggle('hidden');
-  });
-</script>
-
 </body>
 </html>
