--- a/index.html
+++ b/index.html
@@ -86,27 +86,48 @@
     </div>
   </section>
 
-  <!-- SERVICES PREVIEW -->
+  <!-- SERVICES PREVIEW (simplified wording) -->
   <section id="servicios" class="py-16 bg-white/60 border-y border-slate-200/60">
     <div class="mx-auto px-4 sm:px-6 container-narrow">
       <h2 class="text-3xl font-bold">Servicios</h2>
       <div class="mt-8 grid md:grid-cols-3 gap-6">
-        <div class="card p-6"><h3 class="font-semibold text-lg">Market Entry Sprint (4 semanas)</h3><p class="mt-2 text-sm text-slate-600">Encaje local, ICP, mensajes y primeras 5–10 reuniones.</p></div>
-        <div class="card p-6"><h3 class="font-semibold text-lg">Partner & Channel Build</h3><p class="mt-2 text-sm text-slate-600">Identificación, acuerdos y activación de partners.</p></div>
-        <div class="card p-6"><h3 class="font-semibold text-lg">Ventas como Servicio</h3><p class="mt-2 text-sm text-slate-600">Country/Regional Manager temporal para acelerar ARR.</p></div>
+        <div class="card p-6">
+          <h3 class="font-semibold text-lg">Lanzamiento Rápido (4 semanas)</h3>
+          <p class="mt-2 text-sm text-slate-600">Validamos el mercado, afinamos el mensaje y conseguimos tus <strong>primeras 5–10 reuniones</strong>.</p>
+        </div>
+        <div class="card p-6">
+          <h3 class="font-semibold text-lg">Construcción de Partners</h3>
+          <p class="mt-2 text-sm text-slate-600">Te conectamos con <strong>socios locales y canales</strong> que aceleran tu entrada.</p>
+        </div>
+        <div class="card p-6">
+          <h3 class="font-semibold text-lg">Ventas como Servicio</h3>
+          <p class="mt-2 text-sm text-slate-600">Actuamos como <strong>Country Manager temporal</strong>: gestionamos pipeline y cerramos contratos.</p>
+        </div>
       </div>
       <p class="mt-4 text-xs text-slate-500">Modelo flexible: fijo mínimo + variable por éxito.</p>
     </div>
   </section>
 
-  <!-- METHOD -->
+  <!-- METHOD (simplified wording) -->
   <section class="py-16">
     <div class="mx-auto px-4 sm:px-6 container-narrow">
       <h2 class="text-3xl font-bold">Método Kairu</h2>
       <div class="mt-8 grid md:grid-cols-3 gap-6">
-        <div class="card p-6"><p class="text-xs uppercase tracking-wider text-slate-500">Paso 1</p><h3 class="font-semibold mt-1">Diagnóstico</h3><p class="text-sm text-slate-600 mt-2">ICP, propuesta de valor y mensajes.</p></div>
-        <div class="card p-6"><p class="text-xs uppercase tracking-wider text-slate-500">Paso 2</p><h3 class="font-semibold mt-1">Tracción</h3><p class="text-sm text-slate-600 mt-2">Pipeline inicial y acuerdos con partners.</p></div>
-        <div class="card p-6"><p class="text-xs uppercase tracking-wider text-slate-500">Paso 3</p><h3 class="font-semibold mt-1">Escala</h3><p class="text-sm text-slate-600 mt-2">Playbooks, métricas y handover.</p></div>
+        <div class="card p-6">
+          <p class="text-xs uppercase tracking-wider text-slate-500">Paso 1</p>
+          <h3 class="font-semibold mt-1">Diagnóstico</h3>
+          <p class="text-sm text-slate-600 mt-2">Entendemos tu negocio, afinamos el mensaje y definimos a quién vender.</p>
+        </div>
+        <div class="card p-6">
+          <p class="text-xs uppercase tracking-wider text-slate-500">Paso 2</p>
+          <h3 class="font-semibold mt-1">Tracción</h3>
+          <p class="text-sm text-slate-600 mt-2">Conseguimos las primeras reuniones y cerramos acuerdos con socios locales.</p>
+        </div>
+        <div class="card p-6">
+          <p class="text-xs uppercase tracking-wider text-slate-500">Paso 3</p>
+          <h3 class="font-semibold mt-1">Escala</h3>
+          <p class="text-sm text-slate-600 mt-2">Documentamos lo que funciona, medimos y dejamos un sistema listo para tu equipo.</p>
+        </div>
       </div>
     </div>
   </section>
