--- a/en/index.html
+++ b/en/index.html
@@ -86,27 +86,48 @@
     </div>
   </section>
 
-  <!-- SERVICES PREVIEW -->
+  <!-- SERVICES PREVIEW (simplified wording) -->
   <section id="services" class="py-16 bg-white/60 border-y border-slate-200/60">
     <div class="mx-auto px-4 sm:px-6 container-narrow">
       <h2 class="text-3xl font-bold">Services</h2>
       <div class="mt-8 grid md:grid-cols-3 gap-6">
-        <div class="card p-6"><h3 class="font-semibold text-lg">Market Entry Sprint (4 weeks)</h3><p class="mt-2 text-sm text-slate-600">Local fit, ICP, messaging and first 5–10 meetings.</p></div>
-        <div class="card p-6"><h3 class="font-semibold text-lg">Partner & Channel Build</h3><p class="mt-2 text-sm text-slate-600">Discovery, agreements and activation of partners.</p></div>
-        <div class="card p-6"><h3 class="font-semibold text-lg">Sales as a Service</h3><p class="mt-2 text-sm text-slate-600">Interim Country/Regional Manager to accelerate ARR.</p></div>
+        <div class="card p-6">
+          <h3 class="font-semibold text-lg">Fast Launch (4 weeks)</h3>
+          <p class="mt-2 text-sm text-slate-600">We validate the market, refine the message and secure your <strong>first 5–10 meetings</strong>.</p>
+        </div>
+        <div class="card p-6">
+          <h3 class="font-semibold text-lg">Partner & Channel Build</h3>
+          <p class="mt-2 text-sm text-slate-600">We connect you with <strong>local partners and channels</strong> to accelerate entry.</p>
+        </div>
+        <div class="card p-6">
+          <h3 class="font-semibold text-lg">Sales as a Service</h3>
+          <p class="mt-2 text-sm text-slate-600">We act as your <strong>interim Country Manager</strong>: manage pipeline and close deals.</p>
+        </div>
       </div>
       <p class="mt-4 text-xs text-slate-500">Flexible model: small retainer + success fee.</p>
     </div>
   </section>
 
-  <!-- METHOD -->
+  <!-- METHOD (simplified wording) -->
   <section class="py-16">
     <div class="mx-auto px-4 sm:px-6 container-narrow">
       <h2 class="text-3xl font-bold">Kairu Method</h2>
       <div class="mt-8 grid md:grid-cols-3 gap-6">
-        <div class="card p-6"><p class="text-xs uppercase tracking-wider text-slate-500">Step 1</p><h3 class="font-semibold mt-1">Diagnosis</h3><p class="text-sm text-slate-600 mt-2">ICP, value prop and messages.</p></div>
-        <div class="card p-6"><p class="text-xs uppercase tracking-wider text-slate-500">Step 2</p><h3 class="font-semibold mt-1">Traction</h3><p class="text-sm text-slate-600 mt-2">Initial pipeline and partner agreements.</p></div>
-        <div class="card p-6"><p class="text-xs uppercase tracking-wider text-slate-500">Step 3</p><h3 class="font-semibold mt-1">Scale</h3><p class="text-sm text-slate-600 mt-2">Playbooks, metrics and handover.</p></div>
+        <div class="card p-6">
+          <p class="text-xs uppercase tracking-wider text-slate-500">Step 1</p>
+          <h3 class="font-semibold mt-1">Diagnosis</h3>
+          <p class="text-sm text-slate-600 mt-2">Understand your business, sharpen the message and define who to sell to.</p>
+        </div>
+        <div class="card p-6">
+          <p class="text-xs uppercase tracking-wider text-slate-500">Step 2</p>
+          <h3 class="font-semibold mt-1">Traction</h3>
+          <p class="text-sm text-slate-600 mt-2">Land first meetings and sign agreements with local partners.</p>
+        </div>
+        <div class="card p-6">
+          <p class="text-xs uppercase tracking-wider text-slate-500">Step 3</p>
+          <h3 class="font-semibold mt-1">Scale</h3>
+          <p class="text-sm text-slate-600 mt-2">Document what works, measure and leave a system your team can run.</p>
+        </div>
       </div>
     </div>
   </section>
