--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </h1>
           <p class="mt-5 text-lg text-slate-600">Abrimos clientes y partners sin costes fijos. Estrategia clara, ejecución local y foco en resultados.</p>
           <div class="mt-6 flex gap-3 flex-wrap">
-            <a href="/contacto.html" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">Agenda una conversación</a>
+            <a href="/contacto.html" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">Reserva una reunión</a>
             <a href="/servicios.html" class="px-5 py-3 rounded-xl border border-slate-300 font-medium">Ver servicios</a>
           </div>
           <div class="mt-6 text-xs text-slate-500">SaaS B2B, GovTech, EdTech, AgTech/FoodTech, Smart Solutions.</div>
