--- a/contacto.html
+++ b/contacto.html
@@ -31,7 +31,7 @@
 
 <section class="py-16"><div class="mx-auto px-4 sm:px-6 container-narrow grid md:grid-cols-2 gap-6">
 <div class="card p-6"><h2 class="text-2xl font-bold">Contacto</h2><p class="mt-2 text-slate-600">Cuéntanos en 3–4 líneas tu objetivo y el estado actual.</p><a class="mt-4 inline-block px-5 py-3 rounded-xl bg-kairu-600 text-white" href="mailto:alex@kairu.tech?subject=Kairu%20Tech%20-%20Consulta&body=Hola%20Kairu,%20queremos%20explorar%20el%20mercado%20de%20ES/LATAM%20para%20...">Enviar email</a><p class="text-xs text-slate-500 mt-3">Dirección: Madrid & London</p></div>
-<div class="card p-6"><h3 class="font-semibold">Agenda una llamada</h3><p class="text-sm text-slate-600 mt-2">https://calendly.com/alex-kairu/30min</p><a class="mt-4 inline-block px-5 py-3 rounded-xl border border-slate-300" href="#" aria-disabled="true">Añadir enlace de calendario</a></div>
+<div class="card p-6"><h3 class="font-semibold">Agenda una llamada</h3><p class="text-sm text-slate-600 mt-2">que texto pongo aqui</p><a class="mt-4 inline-block px-5 py-3 rounded-xl border border-slate-300" href="https://calendly.com/alex-kairu/30min" aria-disabled="true">Añadir enlace de calendario</a></div>
 </div></section>
 
 <footer class="py-10 border-t border-slate-200/60 text-sm text-slate-500">
