--- a/contacto.html
+++ b/contacto.html
@@ -30,7 +30,7 @@
 </header>
 
 <section class="py-16"><div class="mx-auto px-4 sm:px-6 container-narrow grid md:grid-cols-2 gap-6">
-<div class="card p-6"><h2 class="text-2xl font-bold">Contacto</h2><p class="mt-2 text-slate-600">Cuéntanos en 3–4 líneas tu objetivo y el estado actual.</p><a class="mt-4 inline-block px-5 py-3 rounded-xl bg-kairu-600 text-white" href="mailto:alex@kairu.tech?subject=Kairu%20Tech%20-%20Consulta&body=Hola%20Kairu,%20queremos%20explorar%20el%20mercado%20de%20ES/LATAM%20para%20...">Enviar email</a><p class="text-xs text-slate-500 mt-3">Dirección: Madrid & London</p></div>
+<div class="card p-6"><h2 class="text-2xl font-bold">Contacto</h2><p class="mt-2 text-slate-600">Cuéntanos en 3–4 líneas tu objetivo y el estado actual.</p><a class="mt-4 inline-block px-5 py-3 rounded-xl bg-kairu-600 text-white" href="mailto:alex@kairu.tech?subject=Kairu%20Tech%20-%20Consulta&body=Hola%20Alex,%20queremos%20explorar%20el%20mercado%20de%20ES/LATAM%20para%20...">Enviar email</a><p class="text-xs text-slate-500 mt-3">Dirección: Madrid & London</p></div>
 <div class="card p-6"><h3 class="font-semibold">Agenda una llamada</h3><p class="text-sm text-slate-600 mt-2">Elige el horario que mejor te encaje para hablar con nosotros.</p><a class="mt-4 inline-block px-5 py-3 rounded-xl border border-slate-300" href="https://calendly.com/alex-kairu/30min" target="_blank" aria-disabled="true" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium hover:bg-kairu-700">Reservar en Calendly</a></div>
 </div></section>
 
